jdk11 (#39)
* only keep 5 builds

* jdk11

* memory percentage for java 11